--- a/TypeScript/0705/0705.md
+++ b/TypeScript/0705/0705.md
@@ -149,6 +149,19 @@ console.log(humanId);
 console.log(humanGender);
 ```
 
+```ts
+// 예시 7
+interface Options {
+  key: string;
+  idx: number;
+}
+
+const A: Options[] = [{key: "AAAA", idx: 1}, {key: "BBBB", idx: 2}];
+const [, a] = A;
+
+console.log(a);
+```
+
 7. 타입스크립트에서는 함수의 파라미터에 초기값을 설정할 수 있다.
 
 ```ts
@@ -165,6 +178,8 @@ ftn(); // 3
 > 배우면 좋은 것!  
 
 8. 유사 배열 arguments (이터러블 프로토콜 => 이터레이터 프로토콜), for of 문
+<a href="https://ko.javascript.info/iterable">https://ko.javascript.info/iterable</a>  
+
 
 ```ts
 // 예시
