--- a/React/0707.md
+++ b/React/0707.md
@@ -1,5 +1,3 @@
-18:23
-
 ```js
 function shuffle(list) {
   let _ = [...list];
@@ -20,6 +18,19 @@ console.assert( // 거짓이면 출력한다.
 ```
 
 1. Vue.js React는 모두 Virtual Dom를 사용한다.
+
+```js
+// 대충 이러한 것을 h(hyperscript)로 불러와서 사용한다.
+function createElement(type, props, ...children) {
+  return {
+    $$typeof: Symbol('virtual-element'),
+    key: null,
+    type,
+    props: { ...props, children: [...(props.children ?? []), ...children] },
+  };
+}
+```
+
 - 장점  
   - 효율적인 업데이트: 가상 DOM은 변경된 부분만 감지하여 업데이트하므로, 모든 요소를 다시 렌더링하지 된다. 성능 향상
   - 추상화: 가상 DOM은 실제 DOM의 추상화 계층을 제공하여 더 간단한 인터페이스로 작업할 수 있다.
@@ -28,11 +39,12 @@ console.assert( // 거짓이면 출력한다.
 
 2. 자바스크립트에서 `import`를 사용하려면 해당 파일의 해당 항목에 `export`가 제시되어 있어야 한다.  
 
-※ 모듈에 대해서 공부하자!  
-<a href="https://ko.javascript.info/modules-intro">https://ko.javascript.info/modules-intro</a>  
-<a href="https://ko.javascript.info/import-export">https://ko.javascript.info/import-export</a>
+> ※ 모듈에 대해서 공부하자!  
+- <a href="https://ko.javascript.info/modules-intro">https://ko.javascript.info/modules-intro</a>  
+- <a href="https://ko.javascript.info/import-export">https://ko.javascript.info/import-export</a>
 
--  `script`에서 `src`가 있다면 태그 내의 내용은 무시된다.  
+
+>  `script`에서 `src`가 있다면 태그 내의 내용은 무시된다.  
 
 
 `export`: 이름으로 내보내기 -> `as`를 통해 이름 변경 가능    
@@ -48,3 +60,16 @@ import ftn from './file.js'
 ```
 
 ※ 아무것도 없다면: 외부에서 접근할 수 없는 것!  
+
+<hr>  
+
+- 클래스에서 #으로 시작하는 변수나 메서드는 private
+- 스태틱 메서드는 자바에서 스태틱 메서드와 비슷한 것으로 생각되며, 그렇지 않은 것은 istance 메서드이다.
+- 웹 환경이 아닌 IDE에서 자바스크립트를 import 하려면 `package.json` 에 `type="module"`을 추가해야 한다.
+
+
+<hr>
+
+# React  
+
+1. React는 mutable(가변) data를 허용하지 않는다.  
