--- a/React/0707/0707.md
+++ b/React/0707/0707.md
@@ -70,6 +70,75 @@ import ftn from './file.js'
 
 <hr>
 
+> functional Programming   
+
+함수형 프로그래밍  
+- 프로그래밍 패러다임 중 하나로, <b>프로그래밍을 함수들의 조합으로 바라보는 것</b>
+  - 가독성, 재사용성, 유지보수 up  
+
+<br>  
+
+<img src="./pureFuntion.png" style="height: 300px;">
+<img src="./pureVSimpure.png" style="height: 300px;">
+
+프로그래밍 패러다임  
+<a href="https://hyperskill.org/learn/step/15860">https://hyperskill.org/learn/step/15860</a>
+
+- 명령형 프로그래밍(Imperative Programming)  
+- 선언형 프로그래밍(Declarative Programming)  
+
+<br>  
+
+> 함수형 프로그래밍의 핵심 원칙  
+- 각 함수가 한 가지 작업을 제대로 수행하는지 확인하는 데 중점  
+- 사용하는 이유: 읽기 쉽고, 간결하고, 유지 관리가 용이하며 테스트하기에 좋다.
+- JavaScript 프로그래밍 패러다임  
+  - 함수형 프로그래밍  
+    - 함수 중심 설계
+    - immutable
+    - 적은 데이터 구조  
+    - 사이드 이펙트가 없는 함수  
+  
+  - 객체 지향 프로그래밍  
+    - mutable
+    - 많은 데이터 구조  
+    - 사이드 이펙트를 포함하는 메서드  
+
+<br>  
+
+> 사이드 이펙트  
+- 순수 함수는 부수 효과를 포함해서는 안된다.  
+  - input 입력 및 변경  
+  - DOM 쿼리 및 업데이트  
+  - 네트워크 API 호출  
+  - 로깅(logging)
+  - 파일 읽기 / 쓰기  
+  - 글로벌 상태 읽기  
+
+<br>  
+
+> JavaScript 빌트인 함수  
+- map method  
+- filter method  
+- reduce method  
+- flat method  
+
+<br>  
+
+> 함수형 프로그래밍, 중급 개념  
+- 재귀  
+- 고차 함수  
+- 커링(Currying): 함수를 선언할 때, 모든 인수를 한 번에 받는 대신, 하나의 인수만 받고, 이어서 다음 함수를 반환하도록 하는 것  
+
+<br>  
+
+> 함수 컴포지션  
+- Ramda 라이브러리: <a href="https://ramdajs.com/">https://ramdajs.com/</a>  
+- Lodash 라이브러리: <a href="https://lodash.com/">https://lodash.com/</a>
+
+
+<hr>
+
 # React  
 
 1. React는 mutable(가변) data를 허용하지 않는다.  
