--- a/React/0707/0707.md
+++ b/React/0707/0707.md
@@ -106,12 +106,12 @@ import ftn from './file.js'
 
 <br>  
 
-> 사이드 이펙트  
+> 사이드 이펙트(side effect)  
 - 순수 함수는 부수 효과를 포함해서는 안된다.  
   - input 입력 및 변경  
   - DOM 쿼리 및 업데이트  
   - 네트워크 API 호출  
-  - 로깅(logging)
+  - 로깅(logging) -> 
   - 파일 읽기 / 쓰기  
   - 글로벌 상태 읽기  
 
@@ -142,3 +142,67 @@ import ftn from './file.js'
 # React  
 
 1. React는 mutable(가변) data를 허용하지 않는다.  
+2. React는 순수 함수(pure function: 동일한 입력 값에 대해 항상 동일한 출력 값을 보장하는 함수)로 작동한다.  
+3. React에서 여러 효과가 복합적으로 엉켜 순수하지 않은 함수(사이드 이펙트 함수)는 코드를 '순수' 함수와 "부수 효과"를 처리하는 함수로 나누어 재구성해서 사용한다.    
+
+```js
+// DOM조작을 한다면 해당 HTMLelement는 존재해야 하기 때문에 다음과 같은 코드를 사용한다.  
+
+function sideEffect(node) {
+  node.innerHTML = "Loading...";
+}
+
+// ->
+// ts 라면 isLoading: boolean, node: HTMLelement를 지정하면 쉽게 해결할 수 있다.
+function setLoading(isLoading = false, node) {
+  if (!node || node.nodeType !== document.ELEMENT_NODE) {
+    throw new Error('...');
+  }
+
+  node.innerHTML = isLoading? "Loading..." : "";
+}
+```
+
+4. `script`의 `defer` 속성 - <a href="http://www.tcpschool.com/html-tag-attrs/script-defer">http://www.tcpschool.com/html-tag-attrs/script-defer</a>
+
+5. React 관련 CDN
+- [UNPKG CDN: React](https://unpkg.com/browse/react/)
+- [UNPKG CDN: ReactDOM](https://unpkg.com/browse/react-dom/)
+- [UNPKG CDN: @babel/standalone](https://unpkg.com/browse/@babel/standalone/)
+- [@babel/standalone](https://babeljs.io/docs/babel-standalone)
+
+6. JS에서는 HTML을 사용할 수 없기에 만든 확장이 `.jsx`  
+- `.jsx`: xml 문법을 따르는 자바스크립트 확장
+- <a href="https://react.dev/learn/writing-markup-with-jsx">https://react.dev/learn/writing-markup-with-jsx</a>  
+- 웹 표준이 아님: 웹 브라우저가 해석할 수 없음.  
+- jsx 파일을 이용하려면 babel을 사용해야 한다. - <a href="https://react.dev/learn/writing-markup-with-jsx">https://react.dev/learn/writing-markup-with-jsx</a>  
+
+7. JSX(사용자) -> 컴파일러(TypeScript or Babel) -> React 요소 (React.createElement())
+
+<hr>  
+
+### Vite  
+- <a href="https://vitejs.dev/guide/#scaffolding-your-first-vite-project">https://vitejs.dev/guide/#scaffolding-your-first-vite-project</a>  
+
+> Vite 프론트엔드 개발 도구  
+
+Vite 도구를 사용해 React 개발 환경을 매뉴얼 구성합니다. - 개발자 경험 향상
+
+- [react](https://www.npmjs.com/package/react)
+- [react-dom](https://www.npmjs.com/package/react-dom)
+- [vite](https://www.npmjs.com/package/vite)
+- [@vitejs/plugin-react](https://www.npmjs.com/package/@vitejs/plugin-react)
+- [@types/node](https://www.npmjs.com/package/@types/node)
+- [@types/react](https://www.npmjs.com/package/@types/react)
+- [@types/react-dom](https://www.npmjs.com/package/@types/react-dom)
+- [eslint](https://www.npmjs.com/package/eslint)
+- [eslint-plugin-react](https://github.com/jsx-eslint/eslint-plugin-react#eslint-plugin-react-)
+- [eslint-plugin-jsx-a11y](https://www.npmjs.com/package/eslint-plugin-jsx-a11y)
+- [eslint-plugin-react-hooks](https://www.npmjs.com/package/eslint-plugin-react-hooks)
+- [eslint-plugin-react-refresh](https://www.npmjs.com/package/eslint-plugin-react-refresh)
+- [eslint-plugin-import](https://www.npmjs.com/package/eslint-plugin-import)
+
+<br>
+
+> 특징  
+- JavaScript의 확장자가 반드시 `.jsx`이어야 한다.
