--- a/consultant/0719.md
+++ b/consultant/0719.md
@@ -30,7 +30,7 @@
 # 오후 종례  
 - <a href="https://deck-24abcd.netlify.app/">https://deck-24abcd.netlify.app/</a>  
 
-> DR (Disaster Recovery: 장애 복ㄱ구 솔루션)
+> DR (Disaster Recovery: 장애 복구 솔루션)
 - 서비스를 운영하고 있는 IDC 혹은 서비스에 재해가 발생하는 경우 즉각적인 서비스 복구를 위한 Backup 플랜 인프라 구축
 - 단순 Backup 수준을 넘어서 자연재해나, 물리적인 혹은 기술적인 운영시스템의 결함이 발생하는 경우 즉시 사용가능한 자원  
 - Cold DR, Warm DR, Active DR
