--- a/React/Nomad1/6.md
+++ b/React/Nomad1/6.md
@@ -2,6 +2,8 @@
 1. 첫 번째 render에만 코드가 실행되고, 다른 state 변화에 실행되지 않도록 하는 게 하는 것은 어떻게 할 수 있을까?  
 
 ### 6.1 useEffect
+0. **렌더링 후 실행된다.**
+
 1. useEffect의 구성  
 - `useEffect(effect: EffectCallback, deps?: DependencyList)`
 - `effect`: 딱 한 번만 실행하고 싶은 코드  
@@ -124,8 +126,8 @@ function Hello() {
 	useEffect(() => {
 		console.log("created :)")
 		return () => {console.log("distoryed :(")}; // Cleanup function
-    // component가 제거될 때, 실행된다.
-	}, [])
+	}, []) // component가 제거될 때, 실행된다. (비어있기 때문에)
+	// 만약 관찰하는 게 있다면 -> 업데이트 될 때 수행된다.
 	return <h1>Hello</h1>;
 }
 
