--- a/consultant/0727.md
+++ b/consultant/0727.md
@@ -9,5 +9,5 @@
 > Naming Convention  
 - 프로그래머가 가장 힘들어하는 일: 49%  
 - 소스 코드를 읽고 이해하는 데 필요한 노력을 줄이기 위해
-- 코드 검토가 구문 및 명명 표준보다 더 중요한 문제에 집중할 수 있도록 명명 규칙은 무엇이 제일 좋은 지는 취향의 문제이긴 하지만, 단 그 코드아네서는 일관성을 가져야 한다.  
+- 코드 검토가 구문 및 명명 표준보다 더 중요한 문제에 집중할 수 있도록 명명 규칙은 무엇이 제일 좋은 지는 취향의 문제이긴 하지만, 단 그 코드 안에서는 일관성을 가져야 한다.  
 
