--- a/consultant/1010.md
+++ b/consultant/1010.md
@@ -17,4 +17,18 @@
 - 백엔드 개발자에게 중요한 것은 무엇일까?
   - 기획자 또는 사용자가 원하는 기능을 '좋은 성능'과 유지보수가 쉬운 '효율적인 구조'로 설계하고 개발하는 능력
 
-  
+### 내 포트폴리오
+![](2023-10-10-09-23-59.png)
+![](2023-10-10-09-24-27.png)
+![](2023-10-10-09-25-03.png)
+
+
+### 포트폴리오 상세
+- 와이어 프레임, 기능 상세 설명 등
+- 기능 구현에 사용된 기술, 알고리즘에 대한 설명
+- UCC
+- GIT 등
+
+### 프로젝트의 목표 설정
+- 면접관이 내 포트폴리오를 10분 이상 보도록 만들자.  
+
