--- a/consultant/1018.md
+++ b/consultant/1018.md
@@ -1,20 +1,56 @@
 # 모바일 개발에 필수인 라이브러리, 프레임워크
 
 ### 라이브러리
+
 Retrofit2: 서버와의 통신을 도와주는 라이브러리
 Glide: 이미지를 손쉽게 처리하는 있도록 도와주는 라이브러리
 Gson: Json <-> 객체
 
 > 라이브러리의 장점
+
 - 효율적인 코드 작성
 - 손쉬운 버전 관리
 - 효율적인 유지보수
 
-
 ### Jetpack
+
 Android Jetpack
+
 - Jetpack은 개발자가 중요한 코드에 집중할 수 있도록 권장사항, 준수, 사용구 코드 감소, 여러 Android 버전과 기기에서 일관되게 작동하는 코드 작성을 돕는 라이브러리 묶음
 
 > CameraX
+
 - CameraX를 통해 코드 행을 9000개 이상 줄이고 등록 취소율을 5배 개선한 Monzo
 
+### ViewModel과 livedata
+
+- MVVM패턴
+  - 데이터의 흐름을 효율적으로 관리
+
+### dagger2(Dependency Injection)의 개념
+
+- 의존성 주입의 기본적인 의미는 '외부'에서 클라이언트에게 서비스를 제공(주입)하는 것
+- 다시 말해, 객체가 필요로 하는 어떤 것을 외부에서 전달해주는 것으로 볼 수 있음.
+
+```java
+class Drink {
+  private Coffee coffee;
+
+  public Drint(Coffee coffee) {
+    this.coffee = coffee;
+  }
+}
+
+
+class Coffee {}
+
+class Espresso extends Coffee {}
+
+class Latte extends Coffee {}
+```
+
+### RxKotlin/RxJava
+- 옵저버 패턴
+- 발행/구독
+
+> 특정 이벤트 발생 시 동작 실행  
